crates/rustframe/tests/ui/fail/missing_extractor.stderr
error: route parameters require one of `#[body]`, `#[query]`, `#[param]`, or `#[header]`
  --> tests/ui/fail/missing_extractor.rs:11:29
   |
11 |     async fn invalid(&self, value: String) -> Result<(), HttpError> {
   |                             ^^^^^
